# fraternitas-challenge

./: .gitignore  .pre-commit-config.yaml  README.md
.github/actions/push-python-lamda-to-s3/: action.yaml
.github/workflows/: lamda-to-s3-and-deploy.yaml  push-python-lamda-to-s3.yaml
api/: Makefile  main.py  pyproject.toml
api/tests/: test_main.py
terraform/modules/: .terraform-docs.yml
terraform/modules/aws_lambda/: README.md  cloudwatch.tf  main.tf  output.tf  variables.tf
terraform/modules/aws_s3/: README.md  lifecycle_rules.tf  main.tf  output.tf  variables.tf
terraform/phases/prod/: .terraform.lock.hcl  conf.tf  locals.tf  main.tf  variables.tf
terraform/phases/support/: conf.tf  main.tf  openid.tf  policies.tf
